--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <header>
         <nav>
-            <a href="#">
+            <a href="./index.html">
                 <img src="./images/Logo.jpg" alt="logo"></a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href="">Profile</a></li>
+                <li><a href="">Profilo</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
@@ -31,27 +31,30 @@
         <section>
 
             <h1>Effective Solutions for Your Business</h1>
-            <button class="button">Order Service</button>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h2>Strategy</h2>
                     <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
+                        problem to walk away with the perfect and creative solution.
+                    </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h2>Punctuality</h2>
                     <p> Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h2>Diligence</h2>
                     <p> Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h2>Technologies</h2>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
