--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href="">Protfilo</a></li>
+                <li><a href="">Protfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
             </ul>
         </address>
 
