--- a/index.html
+++ b/index.html
@@ -64,21 +64,25 @@
             <h2>Our Team</h2>
             <ul>
                 <li><a href="">
-                        <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264"></a>
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                        <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264">
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
+                    </a>
                 </li>
-                <li><a href=""><img src="./images/img-2.jpg" alt="Tom Ford" width="264"></a>
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li><a href=""><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
+                    </a>
                 </li>
-                <li><a href=""></a><img src="./images/img-3.jpg" alt="Camila Garcia" width="264"></a>
+                <li><a href=""></a><img src="./images/img-3.jpg" alt="Camila Garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
+                    </a>
                 </li>
-                <li><a href=""><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264"></a>
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li><a href=""><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </a>
                 </li>
             </ul>
         </section>
