--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
@@ -64,25 +64,25 @@
             <h2>Our Team</h2>
             <ul>
                 <li><a href="">
-                        <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
-                    </a>
+                        <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264"></a>
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+
                 </li>
-                <li><a href=""><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
-                    </a>
+                <li><a href=""><img src="./images/img-2.jpg" alt="Tom Ford" width="264"></a>
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+
                 </li>
-                <li><a href=""></a><img src="./images/img-3.jpg" alt="Camila Garcia" width="264">
+                </a>
+                <li><a href=""></a><img src="./images/img-3.jpg" alt="Camila Garcia" width="264"></a>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
-                    </a>
                 </li>
-                <li><a href=""><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
-                    </a>
+                <li><a href=""><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264"></a>
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+
                 </li>
             </ul>
         </section>
