--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href="">Protfolio</a></li>
+                <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
@@ -63,26 +63,23 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><a href="">
-                        <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264"></a>
+                <li><a href=""><img src="./images/img-1.jpg" width="264" alt="Mark Guerrero"></a>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
 
                 </li>
-                <li><a href=""><img src="./images/img-2.jpg" alt="Tom Ford" width="264"></a>
+                <li><a href=""><img src="./images/img-2.jpg" width="264" alt="Tom Ford"></a>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
 
                 </li>
-                </a>
-                <li><a href=""></a><img src="./images/img-3.jpg" alt="Camila Garcia" width="264"></a>
+                <li><a href=""><img src="./images/img-3.jpg" width="264" alt="Camila Garcia"></a>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><a href=""><img src="./images/img-4.jpg" alt="Daniel Wilson" width="264"></a>
+                <li><a href=""><img src="./images/img-4.jpg" width="264" alt="Daniel Wilson"></a>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
-
                 </li>
             </ul>
         </section>
