--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><a href=""><img src="./images/img-1.jpg" width="264" alt="Mark Guerrero"></a>
+                <li><img src="./images/img-1.jpg" width="264" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
 
                 </li>
-                <li><a href=""><img src="./images/img-2.jpg" width="264" alt="Tom Ford"></a>
+                <li><img src="./images/img-2.jpg" width="264" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
 
                 </li>
-                <li><a href=""><img src="./images/img-3.jpg" width="264" alt="Camila Garcia"></a>
+                <li><img src="./images/img-3.jpg" width="264" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><a href=""><img src="./images/img-4.jpg" width="264" alt="Daniel Wilson"></a>
+                <li><img src="./images/img-4.jpg" width="264" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
